# DecisionTree

./: .gitignore  CMakeLists.txt  README.md
data/: mushrooms.csv
doc/: mainpage.dox
docs/: _data_frame_8cpp.html  _data_frame_8h.html  _decision_node_8cpp.html  _decision_node_8h.html  _decision_tree_base_8cpp.html  _decision_tree_base_8h.html  _decision_tree_classifier_8cpp.html  _decision_tree_classifier_8h.html  _generic_type_wrapper_8cpp.html  _generic_type_wrapper_8h.html  annotated.html  class_data_frame.html  class_decision_tree_base.html  class_decision_tree_classifier.html  files.html  index.html  mainpage_8dox.html  modules.html  namespace_decision_tree.html  namespaces.html  namespacestd.html  pages.html  searchdata-v1.js  struct_bool.html  struct_decision_node.html  struct_double.html  struct_generic.html  struct_integer.html  struct_string.html  test_main_8cpp.html
docs/xml/: _data_frame_8cpp.xml  _data_frame_8h.xml  _decision_node_8cpp.xml  _decision_node_8h.xml  _decision_tree_base_8cpp.xml  _decision_tree_base_8h.xml  _decision_tree_classifier_8cpp.xml  _decision_tree_classifier_8h.xml  _generic_type_wrapper_8cpp.xml  _generic_type_wrapper_8h.xml  class_data_frame.xml  class_decision_tree_base.xml  class_decision_tree_classifier.xml  index.xml  indexpage.xml  mainpage_8dox.xml  namespace_decision_tree.xml  namespacestd.xml  struct_bool.xml  struct_decision_node.xml  struct_double.xml  struct_generic.xml  (+3 more)
doxygen/: Doxyfile  Doxyfile-mcss  conf.py
src/: DataFrame.cpp  DataFrame.h  DataMatrix.cpp  DataMatrix.h  DecisionNode.cpp  DecisionNode.h  DecisionTreeBase.cpp  DecisionTreeBase.h  DecisionTreeClassifier.cpp  DecisionTreeClassifier.h  GenericTypeWrapper.cpp  GenericTypeWrapper.h  lib132.cpp  lib132.h  magictest.h  testMain.cpp
(+102 files in other folders)
